--- a/internal/npm_install/BUILD.bazel
+++ b/internal/npm_install/BUILD.bazel
@@ -14,6 +14,14 @@ checked_in_ts_project(
     deps = ["@npm//@types/node"],
 )
 
+checked_in_ts_project(
+    name = "compile_npm_repository",
+    src = "npm_repository.ts",
+    checked_in_js = "npm_repository.js",
+    visibility = ["//internal/npm_install:__subpackages__"],
+    deps = ["@npm//@types/node"],
+)
+
 # END-INTERNAL
 
 bzl_library(
