--- a/internal/npm_install/BUILD.bazel
+++ b/internal/npm_install/BUILD.bazel
@@ -22,6 +22,20 @@ checked_in_ts_project(
     deps = ["@npm//@types/node"],
 )
 
+checked_in_ts_project(
+    name = "compile_install_package",
+    src = "install_package.ts",
+    checked_in_js = "install_package.js",
+    visibility = ["//internal/npm_install:__subpackages__"],
+    deps = [
+        "@npm//@types/node",
+        "@npm//@types/ssri",
+        "@npm//@types/tar",
+        "@npm//@types/async",
+        "@npm//@types/request-promise",
+    ],
+)
+
 # END-INTERNAL
 
 bzl_library(
