--- a/package.json
+++ b/package.json
@@ -28,11 +28,16 @@
         "@commitlint/cli": "^8.0.0",
         "@commitlint/config-conventional": "^8.0.0",
         "@gregmagolan/test-a": "0.0.5",
+        "@types/async": "^3.2.3",
         "@types/hammerjs": "2.0.35",
         "@types/jasmine": "~3.3.13",
         "@types/jest": "24.9.0",
         "@types/node": "^12.0.0",
+        "@types/request": "^2.48.5",
+        "@types/request-promise": "^4.1.46",
         "@types/semver": "6.2.0",
+        "@types/ssri": "^7.1.0",
+        "@types/tar": "^4.0.3",
         "babel-jest": "^25.5.1",
         "bazel_workspaces": "file:./tools/npm_packages/bazel_workspaces",
         "clang-format": "1.2.2",
@@ -71,6 +76,7 @@
         "patch-package": "^6.2.2",
         "protobufjs": "6.8.8",
         "protractor": "^5.4.2",
+        "request-promise": "^4.2.5",
         "requirejs": "2.3.6",
         "rollup": "1.3.1",
         "rollup-plugin-amd": "^3.0.0",
@@ -136,5 +142,6 @@
             "pre-push": "yarn bazel:format-check && yarn bazel:lint",
             "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
         }
-    }
+    },
+    "dependencies": {}
 }
