--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
         "@types/node": "^12.0.0",
         "@types/request": "^2.48.5",
         "@types/request-promise": "^4.1.46",
-        "@types/semver": "6.2.0",
+        "@types/semver": "^7.2.0",
         "@types/ssri": "^7.1.0",
         "@types/tar": "^4.0.3",
         "babel-jest": "^25.5.1",
