--- a/package.json
+++ b/package.json
@@ -92,12 +92,15 @@
         "testy": "file:./tools/npm_packages/testy",
         "tmp": "0.1.0",
         "ts-lit-plugin": "^1.1.9",
+        "ts-loader": "^7.0.5",
         "tsickle": "0.38.0",
         "tsutils": "2.27.2",
         "typeorm": "0.2.18",
-        "typescript": "^3.7.5",
+        "typescript": "^3.9.5",
         "unidiff": "1.0.1",
         "v8-coverage": "1.0.9",
+        "webpack": "^4.43.0",
+        "webpack-cli": "^3.3.12",
         "yarn": "1.22.0",
         "zone.js": "0.8.29"
     },
